--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Node.js CI/CD Pipeline
 
 on:
   push:
@@ -12,14 +12,26 @@ jobs:
 
     runs-on: ubuntu-latest
 
-   
-
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 18.x
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18.x
         cache: 'npm'
     - run: npm install
+    - run: npm run build --if-present
     - run: npm test
+    
+    
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Render Deploy Action
+      uses: johnbeynon/render-deploy-action@v0.0.8
+      with:
+    # ID of the service to deploy
+        service-id: SERVICE_ID
+    # A Render API key
+        api-key: RENDER_API
